--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -9,6 +9,14 @@
 "item.elementalcraft.hungerlessring": "Ring of the Hungerless",
 "item.elementalcraft.focus": "Focus",
 
+"item.elementalcraft.receptacle": "Source Receptacle",
+"item.elementalcraft.receptacle.none": "Empty Source Receptacle",
+"item.elementalcraft.receptacle.fire": "Fire Source Receptacle",
+"item.elementalcraft.receptacle.water": "Water Source Receptacle",
+"item.elementalcraft.receptacle.earth": "Earth Source Receptacle",
+"item.elementalcraft.receptacle.air": "Air Source Receptacle",
+"item.elementalcraft.receptacle_empty": "Empty Source Receptacle",
+
 "item.elementalcraft.puresword": "Pure Sword",
 "item.elementalcraft.firesword": "Fire Sword",
 "item.elementalcraft.watersword": "Water Sword",
@@ -30,6 +38,10 @@
 "block.elementalcraft.infuser": "Element Infuser",
 "block.elementalcraft.binder": "Element Binder",
 "block.elementalcraft.pedestal": "Pedestal",
+"block.elementalcraft.pedestal_fire": "Fire Pedestal",
+"block.elementalcraft.pedestal_water": "Water Pedestal",
+"block.elementalcraft.pedestal_earth": "Earth Pedestal",
+"block.elementalcraft.pedestal_air": "Air Pedestal",
 "block.elementalcraft.pureinfuser": "Pure Infuser",
 "block.elementalcraft.firefurnace": "Fire Furance",
 "block.elementalcraft.source": "Element Source",
@@ -39,6 +51,7 @@
 "block.elementalcraft.growthshrine": "Growth Shrine",
 "block.elementalcraft.lavashrine": "Lava Shrine",
 "block.elementalcraft.oreshrine": "Ore Shrine",
+"block.elementalcraft.overloadshrine": "overload Shrine",
 "block.elementalcraft.crystalore": "Inert Crystal Ore",
 "block.elementalcraft.whiterock": "White Rock",
 "block.elementalcraft.whiterock_slab": "White Rock Slab",
