--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -57,6 +57,10 @@
 "block.elementalcraft.whiterock_slab": "White Rock Slab",
 "block.elementalcraft.whiterock_stairs": "White Rock Stairs",
 "block.elementalcraft.whiterock_wall": "White Rock Wall",
+"block.elementalcraft.purerock": "Pure Rock",
+"block.elementalcraft.purerock_slab": "Pure Rock Slab",
+"block.elementalcraft.purerock_stairs": "Pure Rock Stairs",
+"block.elementalcraft.purerock_wall": "Pure Rock Wall",
 
 "spell.elementalcraft.gravelfall": "Gravel Fall",
 "spell.elementalcraft.stonewall": "Stone Wall",
