--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.1.1-1.15.2:
+
+- contained crystal now require 4 gold nuggets instead of 8
+- fix a crash during server start
+
+
 1.1.0-1.15.2:
 
 - fix crystal ore loot table and xp drop
