--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.1.3-1.15.2:
+
+- fix a dedicated server not working at all
+- fix a bug where instruments could return a null stack
+
+
 1.1.2-1.15.2:
 
 - fix a dedicated server crash
