--- a/changelog.txt
+++ b/changelog.txt
@@ -1,21 +1,26 @@
-1.1.3-1.15.2:
+1.1.4-1.15.2 and 2.2.4-1.16.2:
+
+- fix regression with pipes
+- correct text
+
+1.1.3-1.15.2 and 2.2.3-1.16.2:
 
 - fix a dedicated server not working at all
 - fix a bug where instruments could return a null stack
 
 
-1.1.2-1.15.2:
+1.1.2-1.15.2 and 2.2.2-1.16.2:
 
 - fix a dedicated server crash
 
 
-1.1.1-1.15.2:
+1.1.1-1.15.2 and 2.2.1-1.16.2:
 
 - contained crystal now require 4 gold nuggets instead of 8
 - fix a crash during server start
 
 
-1.1.0-1.15.2:
+1.1.0-1.15.2 and 2.2.0-1.16.2:
 
 - fix crystal ore loot table and xp drop
 - fix a crash during pure ore initialization #1
