--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,19 @@
+1.15.2-1.1.6 and 1.16.2-2.2.6:
+
+- Fire Blast Furnace now consume more elements; config: fireBlastFurnaceConsumeAmount
+- fix datapack
+- fix overload shrine not working
+
+
+1.15.2-1.1.5 and 1.16.2-2.2.5:
+
+- new blocks: impaired and improved element pipe
+- new block: burnt glass pane
+- new block: instrument output retriever
 - pipes now control the amount of elements passing through them
-- impaired and improved element pipe
-- add crafting end particle effect for infuser and  binder
-- burnt glass pane
-- added instrument output retriever
-- Added altars: structures with a source
+- added crafting end particle effect for infuser and  binder
+- added altars: structures with a source
+- fix desync bug with instruments
 
 1.1.4-1.15.2 and 2.2.4-1.16.2:
 
