--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,15 @@
+1.15.2-1.1.16 and 1.16.23-2.3.1:
+
+- new item: Hardened Handle
+- new spell: dash
+- improved worldgen filter
+
+
+1.16.3-2.3.0:
+
+- fix worldgen in 1.16.3 (issue #3)
+
+
 1.15.2-1.1.15 and 1.16.2-2.2.16:
 
 - new block: Spell Desk
@@ -75,7 +87,7 @@
 - fix a crash while placing pedestal and pure infuser
 
 
-1.15.2-1.1.7
+1.15.2-1.1.7:
 
 - fix a bug during chunk save
 
@@ -124,4 +136,4 @@
 1.1.0-1.15.2 and 2.2.0-1.16.2:
 
 - fix crystal ore loot table and xp drop
-- fix a crash during pure ore initialization #1
+- fix a crash during pure ore initialization (issue #1)
