--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+1.15.2-1.2.8 and 1.16.3-2.3.10:
+
+- added focus anvil recipes in jei
+- recipes now use tags whenever possible
+- fix some Elementopedia entries
+
+
 1.15.2-1.2.7 and 1.16.3-2.3.9:
 
 - new spell: silk vein
