--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+1.15.2-1.2.9 and 1.16.3-2.3.11:
+
+- rework chestplate air infusion
+
+
 1.15.2-1.2.8 and 1.16.3-2.3.10:
 
 - added focus anvil recipes in jei
